# backend-home-challenge

./: .env.example  .gitignore  CHALLENGE.md  README.md  README_EN.md  pyproject.toml  requirements.txt  run.py  test.db
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_add_admin_user.py  d723ab25a5ed_description.py
container/: Dockerfile  Dockerfile.y  build.sh  run.sh
docs/diagrams/: authentication_flow.mmd  data_flow.mmd  domain_model.mmd  folder_structure.mmd  general_architecture.mmd  order_creation_flow.mmd
scripts/: db.py  init_db.py
src/: main.py
src/auth/application/dto/: auth_dto.py
src/auth/infrastructure/: jwt_service.py
src/auth/infrastructure/api/: auth_routes.py
src/order/application/: create_order.py  get_sales_report.py
src/order/application/dto/: order_dto.py
src/order/domain/model/: order.py
src/order/domain/repository/: order_repository.py
src/order/domain/service/: order_service.py
src/order/infrastructure/api/: order_routes.py
src/order/infrastructure/persistence/: models.py  postgresql_order_repository.py
src/product/application/: get_products.py
src/product/application/dto/: product_dto.py
src/product/domain/model/: product.py
src/product/domain/repository/: product_repository.py
src/product/domain/service/: product_service.py
src/shared/domain/: exceptions.py  value_objects.py
src/user/application/: create_user.py  get_user.py
tests/: conftest.py
tests/integration/api/: test_auth_endpoints.py  test_order_endpoints.py  test_product_endpoints.py  test_user_endpoints.py
(+32 files in other folders)
